--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
         <div class="card-toko terbaik">
           <div class="content">
             <i class="fa-solid fa-bag-shopping "></i>
-            <h3>Produk Terbaik Terjual</h3>
+            <h3>Produk Terjual</h3>
           </div>
         </div>
         <div class="card-toko produk">
