add sign in sign up & add animasi button beranda

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h1>KURSUS AL KHABIIR</h1>
       <p>"Selamat datang di kursus Islami kami, di mana Islam bersarang di hati dan ilmu merajai pikiran. Temukan
         kebijaksanaan dan spiritualitas dalam setiap langkah perjalanan pembelajaranmu."</p>
-      <a href="#">Belajar Sekarang</a>
+      <button class="animated-button"><a href="#">Belajar Sekarang</a></button>
     </div>
 
   </div>
