--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <li><a href="#toko">Toko</a></li>
       <li><a href="#donasi">Donasi</a></li>
       <li><a href="#kontak">Kontak</a></li>
-      <li><a class="active" href="#">Daftar</a></li>
+      <li><a class="active" href="./sign.html">Daftar</a></li>
     </ul>
   </nav>
 
@@ -134,7 +134,7 @@
                 fill="black" />
               <path
                 d="M38.9789 17.8537C39.0004 18.1637 39.0004 18.4736 39.0004 18.7865C39.0004 28.3172 31.7449 39.309 18.4779 39.309V39.3031C14.5586 39.3088 10.7205 38.1863 7.42188 36.0697C7.9918 36.1383 8.56445 36.1725 9.13867 36.1738C12.3871 36.1764 15.5421 35.0869 18.0967 33.0803C16.5916 33.0518 15.1329 32.5538 13.9248 31.6557C12.7166 30.7577 11.8192 29.5045 11.3582 28.0715C12.4388 28.2798 13.5528 28.2373 14.6145 27.9473C11.2496 27.2674 8.82871 24.3109 8.82871 20.8773V20.7859C9.83182 21.3446 10.9545 21.6542 12.1021 21.6887C8.93301 19.5705 7.95605 15.3543 9.86973 12.0578C11.6805 14.2861 13.9398 16.1086 16.5009 17.4068C19.0619 18.7051 21.8674 19.45 24.7352 19.5934C24.4492 18.3626 24.4915 17.0783 24.8576 15.8689C25.2238 14.6596 25.9011 13.5676 26.8217 12.7021C29.7268 9.97128 34.2957 10.1113 37.0266 13.0148C38.6418 12.6959 40.1908 12.1038 41.6068 11.2639C41.0684 12.9339 39.9416 14.3515 38.4361 15.2529C39.8659 15.0845 41.2623 14.7017 42.5781 14.1176C41.6102 15.5672 40.3913 16.8322 38.9789 17.8537Z"
-                fill="#e4a951" />
+                fill="#e2c103" />
             </svg>
           </div>
         </div>
@@ -564,48 +564,54 @@
       <div class="donasi-box">
         <div class="scrollbar-overlay"></div>
         <div class="donation-item">
-          <img src="coba.jpeg" alt="Donasi 1">
+          <img src="/assets/1.png" alt="Donasi 1">
           <div class="donation-content">
             <h3>Judul Donasi 1</h3>
-            <p>Uang terkumpul: <b>$5000</b></p>
+            <span class="line-1"></span>
+            <p>Uang terkumpul: <br> <b>Rp. 13.500.000,-</b></p>
           </div>
         </div>
   
         <div class="donation-item">
-          <img src="gambar2.jpg" alt="Donasi 2">
+          <img src="./assets/2.png" alt="Donasi 2">
           <div class="donation-content">
             <h3>Judul Donasi 2</h3>
-            <p>Uang terkumpul: <b>$3000</b></p>
+            <span class="line-2"></span>
+            <p>Uang terkumpul: <br> <b>Rp. 13.300.000,-</b></p>
           </div>
         </div>
   
         <div class="donation-item">
-          <img src="gambar3.jpg" alt="Donasi 3">
+          <img src="./assets/3.png" alt="Donasi 3">
           <div class="donation-content">
             <h3>Judul Donasi 3</h3>
-            <p>Uang terkumpul: <b>$8000</b></p>
+            <span class="line-3"></span>
+            <p>Uang terkumpul: <br> <b>Rp. 13.800.000,-</b></p>
           </div>
         </div>
   
         <div class="donation-item">
-          <img src="gambar4.jpg" alt="Donasi 4">
+          <img src="./assets/2.png" alt="Donasi 4">
           <div class="donation-content">
             <h3>Judul Donasi 3</h3>
-            <p>Uang terkumpul: <b>$8000</b></p>
+            <span class="line-4"></span>
+            <p>Uang terkumpul: <br> <b>Rp. 13.800.000,-</b></p>
           </div>
         </div>
         <div class="donation-item">
-          <img src="gambar4.jpg" alt="Donasi 4">
+          <img src="./assets/2.png" alt="Donasi 4">
           <div class="donation-content">
             <h3>Judul Donasi 3</h3>
-            <p>Uang terkumpul: <b>$8000</b></p>
+            <span class="line-5"></span>
+            <p>Uang terkumpul: <br> <b>Rp. 13.800.000,-</b></p>
           </div>
         </div>
         <div class="donation-item">
-          <img src="gambar4.jpg" alt="Donasi 4">
+          <img src="./assets/3.png" alt="Donasi 4">
           <div class="donation-content">
             <h3>Judul Donasi 3</h3>
-            <p>Uang terkumpul: <b>$8000</b></p>
+            <span class="line-6"></span>
+            <p>Uang terkumpul: <br> <b>Rp. 13.800.000,-</b></p>
           </div>
         </div>
       </div>
@@ -615,7 +621,7 @@
     <div class="news-container">
       <div class="news-wrapper">
         <div class="news-item">
-          <img src="/assets/b1.jpeg" alt="Berita 1">
+          <img src="/assets/3.png" alt="Berita 1">
           <div class="news-item-content">
             <h3>Ustadz Indonesia membangun pesantren di Amerika Serikat</h3>
             <p>- ANTARA News Yogyakarta</p>
@@ -623,7 +629,7 @@
         </div>
 
         <div class="news-item">
-          <img src="/assets/b2.jpeg" alt="Berita 2">
+          <img src="./assets/1.png" alt="Berita 2">
           <div class="news-item-content">
             <h3>Hancur Lebur Infrastruktur Imbas Perang Israel-Palestina</h3>
             <p>- CNBC Indonesia</p>
@@ -631,7 +637,7 @@
         </div>
 
         <div class="news-item">
-          <img src="/assets/b3.jpeg" alt="Berita 3">
+          <img src="./assets/1.png" alt="Berita 3">
           <div class="news-item-content">
             <h3>Benarkah Umur Umat Islam Hanya 1500 Tahun?</h3>
             <p>Detik.com</p>
@@ -639,7 +645,7 @@
         </div>
 
         <div class="news-item">
-          <img src="/assets/b4.jpeg" alt="Berita 3">
+          <img src="./assets/1.png" alt="Berita 3">
           <div class="news-item-content">
             <h3>MUI: Rektor UGM Lecehkan Islam karena Menegur Pihak yang Melarang LGBT</h3>
             <p>Hidayatullah.com</p>
@@ -647,7 +653,7 @@
         </div>
 
         <div class="news-item">
-          <img src="/assets/b5.jpeg" alt="Berita 3">
+          <img src="./assets/1.png" alt="Berita 3">
           <div class="news-item-content">
             <h3>Benarkah Ada Hitungan dan Besaran Mahar dalam Islam?</h3>
             <p>Muslim Okezone</p>
@@ -655,7 +661,7 @@
         </div>
 
         <div class="news-item">
-          <img src="/assets/b6.jpeg" alt="Berita 3">
+          <img src="./assets/1.png" alt="Berita 3">
           <div class="news-item-content">
             <h3>Awal Syiar Islam di India</h3>
             <p>Republika.id</p>
@@ -663,7 +669,7 @@
         </div>
 
         <div class="news-item">
-          <img src="/assets/b7.jpeg" alt="Berita 3">
+          <img src="./assets/1.png" alt="Berita 3">
           <div class="news-item-content">
             <h3>Mengintip Isi Ka'bah yang Jadi Kiblat Muslim di Seluruh Dunia</h3>
             <p>Detik.com</p>
@@ -671,7 +677,7 @@
         </div>
 
         <div class="news-item">
-          <img src="/assets/b8.jpeg" alt="Berita 3">
+          <img src="./assets/1.png" alt="Berita 3">
           <div class="news-item-content">
             <h3>Inilah Hukum Percaya Ramalan Zodiak dalam Islam</h3>
             <p>Muslim Okezone</p>
@@ -679,7 +685,7 @@
         </div>
 
         <div class="news-item">
-          <img src="/assets/b9.jpeg" alt="Berita 3">
+          <img src="./assets/1.png" alt="Berita 3">
           <div class="news-item-content">
             <h3>Raja Salman, Dunia Islam dan Masa Depan Indonesia</h3>
             <p>SINDOnews</p>
