--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
           <br />
         </div>
         <div class="rectanglebutton">
-          <p>Belajar Sekarang</p>
+          <!-- <p>Belajar Sekarang</p> -->
+          <a href="#">Belajar Sekarang</a>
         </div>
         <div class="media">
           <div class="rectangle">
