--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" href="/assets/logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+  <!-- Aos -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- Slide -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <!-- Box Icon -->
@@ -63,7 +65,7 @@
       <div class="tentang-side">
         <img class="atas-1" src="/assets/atas.png" />
         <div class="judul">KURSUS AL KHABIIR</div>
-        <div class="penjelasan-tentang">
+        <div class="penjelasan-tentang"  data-aos="fade-right" data-aos-duration="2000">
           Selamat datang di platform kursus Islami &quot;Islam di Hati, Ilmu di
           Pikiran&quot;.
           <br />
@@ -83,12 +85,12 @@
           Mari bersama-sama memperkaya hati dan pikiran dengan keindahan Islam.
           <br />
         </div>
-        <div class="rectanglebutton">
+        <div class="rectanglebutton"  data-aos="fade-right" data-aos-duration="2050">
           <!-- <p>Belajar Sekarang</p> -->
-          <a href="#">Belajar Sekarang</a>
+          <a href="#" >Belajar Sekarang</a>
         </div>
         <div class="media">
-          <div class="rectangle">
+          <div class="rectangle" data-aos="fade-down">
             <svg class="formkit-instagram" width="50" height="50" viewBox="0 0 50 50" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -96,7 +98,7 @@
                 fill="black" />
             </svg>
           </div>
-          <div class="rectangle">
+          <div class="rectangle" data-aos="fade-down" data-aos-delay="100" >
             <svg class="entypo-social-facebook" width="50" height="50" viewBox="0 0 50 50" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -104,7 +106,7 @@
                 fill="black" />
             </svg>
           </div>
-          <div class="rectangle">
+          <div class="rectangle" data-aos="fade-down" data-aos-delay="150" >
             <svg class="akar-icons-linkedin-v-1-fill" width="50" height="50" viewBox="0 0 50 50" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
@@ -112,7 +114,7 @@
                 fill="black" />
             </svg>
           </div>
-          <div class="rectangle">
+          <div class="rectangle" data-aos="fade-down" data-aos-delay="200" >
             <svg class="icomoon-free-youtube" width="50" height="50" viewBox="0 0 50 50" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_50_19)">
@@ -127,7 +129,7 @@
               </defs>
             </svg>
           </div>
-          <div class="rectangle">
+          <div class="rectangle" data-aos="fade-down" data-aos-delay="250" >
             <svg class="twitter-icon" width="50" height="50" viewBox="0 0 50 50" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -219,27 +221,27 @@
         <p>Tanggal : 26 Desember 2023</p>
       </div>
       <div class="waktu">
-        <div class="card-waktu">
+        <div class="card-waktu"  data-aos="zoom-in" data-aos-delay="200">
           <h4>Shubuh</h4>
           <p>03.57</p>
         </div>
 
-        <div class="card-waktu">
+        <div class="card-waktu"  data-aos="zoom-in" data-aos-delay="300">
           <h4>Dzuhur</h4>
           <p>11.39</p>
         </div>
 
-        <div class="card-waktu">
+        <div class="card-waktu"  data-aos="zoom-in" data-aos-delay="400">
           <h4>Asar</h4>
           <p>15.06</p>
         </div>
 
-        <div class="card-waktu">
+        <div class="card-waktu"  data-aos="zoom-in" data-aos-delay="500">
           <h4>Maghrib</h4>
           <p>17.55</p>
         </div>
 
-        <div class="card-waktu">
+        <div class="card-waktu"  data-aos="zoom-in" data-aos-delay="600">
           <h4>Isya</h4>
           <p>19.11</p>
         </div>
@@ -269,7 +271,7 @@
 
         <div class="wadah-kegiatan">
 
-          <div class="card-kegiatan">
+          <div class="card-kegiatan" data-aos="flip-up">
             <img src="assets/medal.png" alt="medal">
             <h3>LOMBA</h3>
             <p class="lomba">34+ lomba</p>
@@ -278,7 +280,7 @@
             <a href="#">Menangkan!</a>
           </div>
 
-          <div class="card-kegiatan">
+          <div class="card-kegiatan" data-aos="flip-up" data-aos-delay="300">
             <img src="assets/users-alt.png" alt="dakwah">
             <h3>DAKWAH</h3>
             <p class="lomba">55+ jadwal</p>
@@ -287,7 +289,7 @@
             <a href="#">Menangkan!</a>
           </div>
 
-          <div class="card-kegiatan">
+          <div class="card-kegiatan" data-aos="flip-up" data-aos-delay="400">
             <img src="assets/graduation-cap.png" alt="beasiswa">
             <h3>BEASISWA</h3>
             <p class="lomba">28+ beasiswa</p>
@@ -307,29 +309,29 @@
         <p>Mengingat Kembali Lima Rukun Islam</p>
       </div>
       <div class="rukun">
-        <div class="card-rukun">
+        <div class="card-rukun" data-aos="zoom-in" data-aos-delay="200">
           <img src="assets/rukun-islam/syahadat.png" alt="syahadat">
-          <h4>Syahadat</h4>
+          <h4 data-aos="fade-up" data-aos-delay="500">Syahadat</h4>
         </div>
 
-        <div class="card-rukun">
+        <div class="card-rukun" data-aos="zoom-in" data-aos-delay="300">
           <img src="assets/rukun-islam/sholat.png" alt="sholat">
-          <h4>Sholat</h4>
+          <h4 data-aos="fade-up" data-aos-delay="600">Sholat</h4>
         </div>
 
-        <div class="card-rukun">
+        <div class="card-rukun" data-aos="zoom-in" data-aos-delay="400">
           <img src="assets/rukun-islam/zakat.png" alt="zakat">
-          <h4>Zakat</h4>
+          <h4 data-aos="fade-up" data-aos-delay="700">Zakat</h4>
         </div>
 
-        <div class="card-rukun">
+        <div class="card-rukun" data-aos="zoom-in" data-aos-delay="500">
           <img src="assets/rukun-islam/puasa.png" alt="puasa">
-          <h4>Puasa</h4>
+          <h4 data-aos="fade-up" data-aos-delay="800">Puasa</h4>
         </div>
 
-        <div class="card-rukun">
+        <div class="card-rukun" data-aos="zoom-in" data-aos-delay="600">
           <img src="assets/rukun-islam/haji.png" alt="haji">
-          <h4>Haji</h4>
+          <h4 data-aos="fade-up" data-aos-delay="900">Haji</h4>
         </div>
       </div>
     </div>
@@ -709,7 +711,7 @@
         <div class="colum-kontak">
 
           <div class="sisi sisi-pertama">
-            <div class="about">
+            <div class="about" data-aos="fade-right" data-aos-duration="2000">
               <p>Kursus Al Khabiir</p>
               <p>Berdiri pada tanggal 26 Desember 2023
                 10:00 WIB</p>
@@ -719,7 +721,7 @@
               <p>Mari bersama-sama memperkaya hati dan pikiran dengan keindahan Islam.</p>
             </div>
 
-            <div class="info">
+            <div class="info" data-aos="fade-right" data-aos-duration="2050">
               <p><i class='bx bxs-phone-call'></i>+62 89012345678</p>
               <p><i class='bx bxs-envelope'></i>alkhabiir@kursus.com</p>
               <p><i class='bx bxs-map'></i>Jl. Sejahtera Dunia Akhirat no.1 Kec. Pelanggan, Kota. Segar</p>
@@ -727,11 +729,11 @@
 
             <div class="medsos">
               <ul>
-                <li><i class='bx bxl-instagram-alt'></i></li>
-                <li><i class='bx bxl-facebook'></i></li>
-                <li><i class='bx bxl-twitter'></i></li>
-                <li><i class='bx bxl-youtube'></i></li>
-                <li><i class='bx bxl-linkedin'></i></li>
+                <li data-aos="fade-down"><i class='bx bxl-instagram-alt'></i></li>
+                <li data-aos="fade-down" data-aos-duration="1500"><i class='bx bxl-facebook'></i></li>
+                <li data-aos="fade-down" data-aos-duration="2000"><i class='bx bxl-twitter'></i></li>
+                <li data-aos="fade-down" data-aos-duration="2500"><i class='bx bxl-youtube'></i></li>
+                <li data-aos="fade-down" data-aos-duration="3000"><i class='bx bxl-linkedin'></i></li>
               </ul>
             </div>
 
@@ -777,6 +779,7 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
   <script src="./js/script.js"></script>
 
