--- a/sign.html
+++ b/sign.html
@@ -1,147 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign in & Sign up Form</title>
-    <link rel="icon" href="/assets/logo.png">
-    <link rel="stylesheet" href="/css/sign.css" />
-  </head>
-  <body>
-    <main>
-      <div class="box">
-        <div class="inner-box">
-          <div class="forms-wrap">
-            <form action="index.html" autocomplete="off" class="sign-in-form">
-              <div class="logo">
-                <img src="assets/img/logo.png" alt="Kursus Al Khabiir" />
-                <h4>Kursus Al Khabiir</h4>
-              </div>
 
-              <div class="heading">
-                <h2>Welcome Back</h2>
-                <h6>Belum mendaftar?</h6>
-                <a href="#" class="toggle">Sign up</a>
-              </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sign in & Sign up Form</title>
+  <link rel="icon" href="/assets/logo.png">
+  <link rel="stylesheet" href="/css/sign.css" />
+</head>
 
-              <div class="actual-form">
-                <div class="input-wrap">
-                  <input
-                    type="text"
-                    minlength="4"
-                    class="input-field"
-                    autocomplete="off"
-                    required
-                  />
-                  <label>Name</label>
-                </div>
+<body>
 
-                <div class="input-wrap">
-                  <input
-                    type="password"
-                    minlength="4"
-                    class="input-field"
-                    autocomplete="off"
-                    required
-                  />
-                  <label>Password</label>
-                </div>
-
-                <input type="submit" value="Sign In" class="sign-btn" />
-
-                <p class="text">
-                  Forgotten your password or you login datails?
-                  <a href="#">Get help</a> signing in
-                </p>
-              </div>
-            </form>
-
-            <form action="index.html" autocomplete="off" class="sign-up-form">
-              <div class="logo">
-                <img src="assets/img/logo.png" alt="Kursus Al Khabiir" />
-                <h4>Kursus Al Khabiir</h4>
-              </div>
-
-              <div class="heading">
-                <h2>Get Started</h2>
-                <h6>Sudah memiliki akun?</h6>
-                <a href="#" class="toggle">Sign in</a>
-              </div>
-
-              <div class="actual-form">
-                <div class="input-wrap">
-                  <input
-                    type="text"
-                    minlength="4"
-                    class="input-field"
-                    autocomplete="off"
-                    required
-                  />
-                  <label>Name</label>
-                </div>
-
-                <div class="input-wrap">
-                  <input
-                    type="email"
-                    class="input-field"
-                    autocomplete="off"
-                    required
-                  />
-                  <label>Email</label>
-                </div>
-
-                <div class="input-wrap">
-                  <input
-                    type="password"
-                    minlength="4"
-                    class="input-field"
-                    autocomplete="off"
-                    required
-                  />
-                  <label>Password</label>
-                </div>
-
-                <input type="submit" value="Sign Up" class="sign-btn" />
-
-                <p class="text">
-                  By signing up, I agree to the
-                  <a href="#">Terms of Services</a> and
-                  <a href="#">Privacy Policy</a>
-                </p>
-              </div>
-            </form>
-          </div>
-
-          <div class="carousel">
-            <div class="images-wrapper">
-              <img src="/assets/img/1.png" class="image img-1 show" alt="" />
-              <img src="/assets/img/2.png" class="image img-2" alt="" />
-              <img src="/assets/img/3.png" class="image img-3" alt="" />
+  <main>
+    <div class="box">
+      <div class="inner-box">
+        <div class="forms-wrap">
+          <form action="index.html" autocomplete="off" class="sign-in-form">
+            <div class="logo">
+              <img src="assets/logo.png" alt="Kursus Al Khabiir" />
+              <h4>Kursus Al Khabiir</h4>
             </div>
 
-            <div class="text-slider">
-              <div class="text-wrap">
-                <div class="text-group">
-                  <h2>Menyelami Hikmah Ilahi</h2>
-                  <h2>Belajar Interaktif</h2>
-                  <h2>Undang Orang Lain Bergabung</h2>
-                </div>
+            <div class="heading">
+              <h2>Welcome Back</h2>
+              <h6>Belum mendaftar?</h6>
+              <a href="#" class="toggle">Sign up</a>
+            </div>
+
+            <div class="actual-form">
+              <div class="input-wrap">
+                <input type="text" minlength="4" class="input-field" autocomplete="off" required />
+                <label>Name</label>
               </div>
 
-              <div class="bullets">
-                <span class="active" data-value="1"></span>
-                <span data-value="2"></span>
-                <span data-value="3"></span>
+              <div class="input-wrap">
+                <input type="password" minlength="4" class="input-field" autocomplete="off" required />
+                <label>Password</label>
               </div>
+
+              <input type="submit" value="Sign In" class="sign-btn" />
+
+              <p class="text">
+                Forgotten your password or you login datails?
+                <a href="#">Get help</a> signing in
+              </p>
+            </div>
+          </form>
+
+          <form action="index.html" autocomplete="off" class="sign-up-form">
+            <div class="logo">
+              <img src="assets/logo.png" alt="Kursus Al Khabiir" />
+              <h4>Kursus Al Khabiir</h4>
+            </div>
+
+            <div class="heading">
+              <h2>Get Started</h2>
+              <h6>Sudah memiliki akun?</h6>
+              <a href="#" class="toggle">Sign in</a>
+            </div>
+
+            <div class="actual-form">
+              <div class="input-wrap">
+                <input type="text" minlength="4" class="input-field" autocomplete="off" required />
+                <label>Name</label>
+              </div>
+
+              <div class="input-wrap">
+                <input type="email" class="input-field" autocomplete="off" required />
+                <label>Email</label>
+              </div>
+
+              <div class="input-wrap">
+                <input type="password" minlength="4" class="input-field" autocomplete="off" required />
+                <label>Password</label>
+              </div>
+
+              <input type="submit" value="Sign Up" class="sign-btn" />
+
+              <p class="text">
+                By signing up, I agree to the
+                <a href="#">Terms of Services</a> and
+                <a href="#">Privacy Policy</a>
+              </p>
+            </div>
+          </form>
+        </div>
+
+        <div class="carousel">
+          <div class="images-wrapper">
+            <img src="/assets/img/1.png" class="image img-1 show" alt="" />
+            <img src="/assets/img/2.png" class="image img-2" alt="" />
+            <img src="/assets/img/3.png" class="image img-3" alt="" />
+          </div>
+
+          <div class="text-slider">
+            <div class="text-wrap">
+              <div class="text-group">
+                <h2>Menyelami Hikmah Ilahi</h2>
+                <h2>Belajar Interaktif</h2>
+                <h2>Undang Orang Lain Bergabung</h2>
+              </div>
+            </div>
+
+            <div class="bullets">
+              <span class="active" data-value="1"></span>
+              <span data-value="2"></span>
+              <span data-value="3"></span>
             </div>
           </div>
         </div>
       </div>
-    </main>
+    </div>
+  </main>
 
-    <!-- Javascript file -->
+  <!-- Javascript File -->
+  <script src="/js/sign.js"></script>
+</body>
 
-    <script src="/js/sign.js"></script>
-  </body>
 </html>
