--- a/index.html
+++ b/index.html
@@ -359,112 +359,8 @@
                     <p>Buku Agama Islam</p>
                   </div>
                   <div class="harga">
-                    <span class="text-blink text-error">Rp. 500.000,-</span>
-                    Rp. 350.000,-
-                  </div>
-                </div>
-              </div>
-
-              <div class="card swiper-slide">
-                <div class="image-content">
-                  <div class="card-image">
-                    <img src="./assets/cewek 1.png" alt="" class="card-img" />
-                  </div>
-                </div>
-
-                <div class="card-content">
-                  <div class="rating">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    (100+)
-                  </div>
-                  <div class="name">
-                    <p>Buku Agama Islam</p>
-                  </div>
-                  <div class="harga">
-                    <span class="text-blink text-error">Rp. 500.000,-</span>
-                    Rp. 350.000,-
-                  </div>
-                </div>
-              </div>
-
-              <div class="card swiper-slide">
-                <div class="image-content">
-                  <div class="card-image">
-                    <img src="./assets/cowok 1.png" alt="" class="card-img" />
-                  </div>
-                </div>
-
-                <div class="card-content">
-                  <div class="rating">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    (100+)
-                  </div>
-                  <div class="name">
-                    <p>Buku Agama Islam</p>
-                  </div>
-                  <div class="harga">
-                    <span class="text-blink text-error">Rp. 500.000,-</span>
-                    Rp. 350.000,-
-                  </div>
-                </div>
-              </div>
-
-              <div class="card swiper-slide">
-                <div class="image-content">
-                  <div class="card-image">
-                    <img src="./assets/haji 1.png" alt="" class="card-img" />
-                  </div>
-                </div>
-
-                <div class="card-content">
-                  <div class="rating">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    (100+)
-                  </div>
-                  <div class="name">
-                    <p>Buku Agama Islam</p>
-                  </div>
-                  <div class="harga">
-                    <span class="text-blink text-error">Rp. 500.000,-</span>
-                    Rp. 350.000,-
-                  </div>
-                </div>
-              </div>
-
-              <div class="card swiper-slide">
-                <div class="image-content">
-                  <div class="card-image">
-                    <img src="./assets/buku.jpg" alt="" class="card-img" />
-                  </div>
-                </div>
-
-                <div class="card-content">
-                  <div class="rating">
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-star"></i>
-                    (100+)
-                  </div>
-                  <div class="name">
-                    <p>Buku Agama Islam</p>
-                  </div>
-                  <div class="harga">
-                    <span class="text-blink text-error">Rp. 500.000,-</span>
-                    Rp. 350.000,-
+                    <span class="text-blink text-error">Rp. 100.000,-</span>
+                    Rp. 83.000,-
                   </div>
                 </div>
               </div>
@@ -486,11 +382,115 @@
                     (100+)
                   </div>
                   <div class="name">
-                    <p>Buku Agama Islam</p>
+                    <p>Alat Sholat Wanita</p>
                   </div>
                   <div class="harga">
-                    <span class="text-blink text-error">Rp. 500.000,-</span>
-                    Rp. 350.000,-
+                    <span class="text-blink text-error">Rp. 150.000,-</span>
+                    Rp. 90.000,-
+                  </div>
+                </div>
+              </div>
+
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <div class="card-image">
+                    <img src="./assets/cowok.jpg" alt="" class="card-img" />
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    (100+)
+                  </div>
+                  <div class="name">
+                    <p>Alat Sholat Pria</p>
+                  </div>
+                  <div class="harga">
+                    <span class="text-blink text-error">Rp. 330.000,-</span>
+                    Rp. 195.000,-
+                  </div>
+                </div>
+              </div>
+
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <div class="card-image">
+                    <img src="./assets/haji.jpg" alt="" class="card-img" />
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    (100+)
+                  </div>
+                  <div class="name">
+                    <p>Tiket Haji</p>
+                  </div>
+                  <div class="harga">
+                    <span class="text-blink text-error">Rp. 55.000.000,-</span>
+                    Rp. 40.000.000,-
+                  </div>
+                </div>
+              </div>
+
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <div class="card-image">
+                    <img src="./assets/umroh.jpg" alt="" class="card-img" />
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    (100+)
+                  </div>
+                  <div class="name">
+                    <p>Tiket Umroh</p>
+                  </div>
+                  <div class="harga">
+                    <span class="text-blink text-error">Rp. 42.000.000,-</span>
+                    Rp. 30.000.000,-
+                  </div>
+                </div>
+              </div>
+
+              <div class="card swiper-slide">
+                <div class="image-content">
+                  <div class="card-image">
+                    <img src="./assets/gamis syari cadar .jpg" alt="" class="card-img" />
+                  </div>
+                </div>
+
+                <div class="card-content">
+                  <div class="rating">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    (100+)
+                  </div>
+                  <div class="name">
+                    <p>Gamis Syar'i Cadar</p>
+                  </div>
+                  <div class="harga">
+                    <span class="text-blink text-error">Rp. 150.000,-</span>
+                    Rp. 99.000,-
                   </div>
                 </div>
               </div>
@@ -546,11 +546,11 @@
         <div class="donation-item">
           <img src="/assets/1.png" alt="Donasi 1" />
           <div class="donation-content">
-            <h3>Judul Donasi 1</h3>
+            <h3>Peduli For Palestina</h3>
             <span class="line-1"></span>
             <p>
               Uang terkumpul: <br />
-              <b>Rp. 13.500.000,-</b>
+              <b>Rp. 23.500.000,-</b>
             </p>
           </div>
         </div>
@@ -558,11 +558,11 @@
         <div class="donation-item">
           <img src="./assets/2.png" alt="Donasi 2" />
           <div class="donation-content">
-            <h3>Judul Donasi 2</h3>
+            <h3> Sedekah Yatim Piatu</h3>
             <span class="line-2"></span>
             <p>
               Uang terkumpul: <br />
-              <b>Rp. 13.300.000,-</b>
+              <b>Rp. 13.000.000,-</b>
             </p>
           </div>
         </div>
@@ -570,7 +570,7 @@
         <div class="donation-item">
           <img src="./assets/3.png" alt="Donasi 3" />
           <div class="donation-content">
-            <h3>Judul Donasi 3</h3>
+            <h3>Donasi Bencana Indonesia</h3>
             <span class="line-3"></span>
             <p>
               Uang terkumpul: <br />
@@ -580,20 +580,20 @@
         </div>
 
         <div class="donation-item">
-          <img src="./assets/2.png" alt="Donasi 4" />
+          <img src="./assets/4.jpeg" alt="Donasi 4" />
           <div class="donation-content">
-            <h3>Judul Donasi 3</h3>
+            <h3>Donasi Subuh</h3>
             <span class="line-4"></span>
             <p>
               Uang terkumpul: <br />
-              <b>Rp. 13.800.000,-</b>
+              <b>Rp. 8.000.000,-</b>
             </p>
           </div>
         </div>
         <div class="donation-item">
-          <img src="./assets/2.png" alt="Donasi 4" />
+          <img src="./assets/5.jpeg" alt="Donasi 4" />
           <div class="donation-content">
-            <h3>Judul Donasi 3</h3>
+            <h3>Donasi Difabel Berdaya</h3>
             <span class="line-5"></span>
             <p>
               Uang terkumpul: <br />
@@ -602,9 +602,9 @@
           </div>
         </div>
         <div class="donation-item">
-          <img src="./assets/3.png" alt="Donasi 4" />
+          <img src="./assets/6.jpeg" alt="Donasi 4" />
           <div class="donation-content">
-            <h3>Judul Donasi 3</h3>
+            <h3>Wakaf Air Minum</h3>
             <span class="line-6"></span>
             <p>
               Uang terkumpul: <br />
@@ -618,7 +618,7 @@
     <div class="news-container">
       <div class="news-wrapper">
         <div class="news-item">
-          <img src="/assets/3.png" alt="Berita 1" />
+          <img src="/assets/b1.jpg" alt="Berita 1" />
           <div class="news-item-content">
             <h3>Ustadz Indonesia membangun pesantren di Amerika Serikat</h3>
             <p>- ANTARA News Yogyakarta</p>
@@ -626,7 +626,7 @@
         </div>
 
         <div class="news-item">
-          <img src="./assets/1.png" alt="Berita 2" />
+          <img src="./assets/b2.jpeg" alt="Berita 2" />
           <div class="news-item-content">
             <h3>Hancur Lebur Infrastruktur Imbas Perang Israel-Palestina</h3>
             <p>- CNBC Indonesia</p>
@@ -634,7 +634,7 @@
         </div>
 
         <div class="news-item">
-          <img src="./assets/1.png" alt="Berita 3" />
+          <img src="./assets/b3.jpeg" alt="Berita 3" />
           <div class="news-item-content">
             <h3>Benarkah Umur Umat Islam Hanya 1500 Tahun?</h3>
             <p>Detik.com</p>
@@ -642,7 +642,7 @@
         </div>
 
         <div class="news-item">
-          <img src="./assets/1.png" alt="Berita 3" />
+          <img src="./assets/b4.jpeg" alt="Berita 3" />
           <div class="news-item-content">
             <h3>
               MUI: Rektor UGM Lecehkan Islam karena Menegur Pihak yang
@@ -653,7 +653,7 @@
         </div>
 
         <div class="news-item">
-          <img src="./assets/1.png" alt="Berita 3" />
+          <img src="./assets/b5.jpg" alt="Berita 3" />
           <div class="news-item-content">
             <h3>Benarkah Ada Hitungan dan Besaran Mahar dalam Islam?</h3>
             <p>Muslim Okezone</p>
@@ -661,7 +661,7 @@
         </div>
 
         <div class="news-item">
-          <img src="./assets/1.png" alt="Berita 3" />
+          <img src="./assets/b6.jpeg" alt="Berita 3" />
           <div class="news-item-content">
             <h3>Awal Syiar Islam di India</h3>
             <p>Republika.id</p>
@@ -669,7 +669,7 @@
         </div>
 
         <div class="news-item">
-          <img src="./assets/1.png" alt="Berita 3" />
+          <img src="./assets/b7.jpeg" alt="Berita 3" />
           <div class="news-item-content">
             <h3>
               Mengintip Isi Ka'bah yang Jadi Kiblat Muslim di Seluruh Dunia
@@ -679,7 +679,7 @@
         </div>
 
         <div class="news-item">
-          <img src="./assets/1.png" alt="Berita 3" />
+          <img src="./assets/b8.jpeg" alt="Berita 3" />
           <div class="news-item-content">
             <h3>Inilah Hukum Percaya Ramalan Zodiak dalam Islam</h3>
             <p>Muslim Okezone</p>
@@ -687,7 +687,7 @@
         </div>
 
         <div class="news-item">
-          <img src="./assets/1.png" alt="Berita 3" />
+          <img src="./assets/b9.jpeg" alt="Berita 3" />
           <div class="news-item-content">
             <h3>Raja Salman, Dunia Islam dan Masa Depan Indonesia</h3>
             <p>SINDOnews</p>
