--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="english" dir="ltr">
 
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="icon" href="/assets/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Selamat datang di platform kursus Islami Islam di Hati, Ilmu di Pikiran. Kursus Al Khabiir didirikan pada 26 Desember tahun 2023.">
+  <meta name="keywords" content="Kursus Belajar Islami">
+  <meta name="author" content="Aulia, Ahdan dan Haykal">
+  <meta name="x-robots-tag" content="noindex, nofollow">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- Aos -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!-- Slide -->
@@ -59,7 +64,7 @@
 
     <div class="tentang" id="tentang">
       <div class="tentang-side">
-        <img class="atas-1" src="/assets/atas.png" />
+        <img class="atas-1" src="/assets/atas.png" alt="Mahkota Tulisan"/>
         <div class="judul">KURSUS AL KHABIIR</div>
         <div class="penjelasan-tentang" data-aos="fade-right" data-aos-duration="2000">
           Selamat datang di platform kursus Islami &quot;Islam di Hati, Ilmu
