repairing css and content html

--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
     <div class="container-footer">
       <p>
         &#169; 2024 AL-Khabir - PT Akbar Teknologi Islam Indonesia
-        <span>|</span> Powered By <a href="#">SijaStemba</a>
+        <span>|</span> Powered By <a href="#">AaaaawinStemba</a>
       </p>
     </div>
   </footer>
